<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:hint="@string/agregar_nombre"
        android:layout_marginTop="@dimen/margin16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_agregar_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:hint="@string/agregar_direccion"
        android:layout_marginTop="@dimen/margin16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_agregar_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:hint="@string/agregar_telefono"
        android:layout_marginTop="@dimen/margin16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_agregar_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:hint="@string/agregar_latitud"
        android:layout_marginTop="@dimen/margin16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_agregar_latitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:hint="@string/agregar_longitud"
        android:layout_marginTop="@dimen/margin16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_agregar_longitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/cargando_agregar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:background="@drawable/design_btn_agregar"
        android:text="@string/agregar_continuar"
        android:textColor="@color/colorBlanco"/>

</LinearLayout>